[package]
name = "cabarrus"
version = "0.1.0"
authors = ["Sean Gallagher <stgallag@gmail.com>"]
license = "MIT"

[lib]

[[bin]]
name = "cb-cooccur"
#description = "Find windowed word cooccurances"

[[bin]]
name = "cb-metrics"
#description = "Measure the quality of a word embedding"

[[bin]]
name = "cb-token-count"
#description = "Count the number of unicode tokens in the text"

[dependencies]
# Warc parser
nom = "*"
# Argument parser
clap = "~2.21.1"
# Numpy like arrays
ndarray = {version="*", features=["serde"]}
ndarray-linalg = "*"
ndarray-rand = "*"
linxal = "*"
# Serialization and Deserialization
byteorder = "*"
regex = "*"
# Logging
log = "*"
env_logger = "*"
# Faster hashes
farmhash = "1.1.5"
hash_hasher = "0.2.0"
# Better tokenization (than whitespace)
unicode-segmentation = "*"
# reading matrices without consuming memory
memmap = "*"
